# MexUtilities

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: MexUtilitiesConfig.cmake.in
test/: CMakeLists.txt
test/matlab/: baseTest.m  cases.m  runAllTests.m  sparse_test.m
test/src/: catandpagetimes.cpp  catandpagetimesranges.cpp  eigen.cpp  isfield.cpp  mexName.cpp  movefield.cpp  multifile.hpp  multifile1.cpp  multifile2.cpp  pagetimes.cpp  printf.cpp  ranges.cpp  sparse.cpp  sparse_eigen.cpp  stringexample.cpp  structfields.cpp  warningsanderror.cpp
test/standalone/: blockdata.cpp  sparse.cpp  views.cpp
utilities/: sparse.hpp  utilities.hpp
utilities/details/: blockdata.hpp
utilities/eigen/: conversions.hpp  sparse.hpp
